--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -1,87 +1,3 @@
-/*@font-face {*/
-/*    font-family: 'Proxima Nova';*/
-/*    src: url("./fonts/ProximaNova-Black.eot");*/
-/*    src: local("./fonts/Proxima Nova Black"), local("ProximaNova-Black"), url("./fonts/ProximaNova-Black.eot?#iefix") format("embedded-opentype"), url("./fonts/ProximaNova-Black.woff") format("woff"), url("./fonts/ProximaNova-Black.ttf") format("truetype");*/
-/*    font-weight: 900;*/
-/*    font-style: normal*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: 'Proxima Nova';*/
-/*    src: url("./fonts/ProximaNova-Bold.eot");*/
-/*    src: local("./fonts/Proxima Nova Bold"), local("ProximaNova-Bold"), url("./fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("./fonts/ProximaNova-Bold.woff") format("woff"), url("./fonts/ProximaNova-Bold.ttf") format("truetype");*/
-/*    font-weight: bold;*/
-/*    font-style: normal*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: 'Proxima Nova';*/
-/*    src: url("./fonts/ProximaNova-Regular.eot");*/
-/*    src: local("./fonts/Proxima Nova Regular"), local("ProximaNova-Regular"), url("./fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("./fonts/ProximaNova-Regular.woff") format("woff"), url("./fonts/ProximaNova-Regular.ttf") format("truetype");*/
-/*    font-weight: normal;*/
-/*    font-style: normal*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: 'Proxima Nova';*/
-/*    src: url("./fonts/ProximaNova-Extrabld.eot");*/
-/*    src: local("./fonts/Proxima Nova Extrabold"), local("ProximaNova-Extrabld"), url("./fonts/ProximaNova-Extrabld.eot?#iefix") format("embedded-opentype"), url("./fonts/ProximaNova-Extrabld.woff") format("woff"), url("./fonts/ProximaNova-Extrabld.ttf") format("truetype");*/
-/*    font-weight: 800;*/
-/*    font-style: normal*/
-/*}*/
-
-* {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  outline: none;
-  font-family: 'Proxima Nova', Roboto, system-ui, Tahoma, sans-serif;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  color: #232323;
-}
-
-a,
-span,
-p,
-b,
-h1,
-h2,
-h3,
-h4,
-h5 {
-  color: #232323;
-}
-
-h1 {
-  font-size: 48px;
-}
-
-h2 {
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 30px;
-}
-
-a {
-  text-decoration: none;
-}
-
-.header {
-  border-bottom: 1px solid #f6f6f6;
-  padding: 40px 0;
-}
-
 .header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -94,183 +10,90 @@ a {
   justify-content: space-between;
 }
 
-.header__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header__logo img {
-  margin-right: 15px;
-}
-
-.header__logo h1 {
-  color: #181818;
-  font-size: 24px;
-  letter-spacing: 1%;
-  text-transform: uppercase;
-  font-weight: 800;
-}
-
 .header__logo p {
   color: #7b7b7b;
 }
 
+.cart__bottom_buttons {
+  *:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
 .button {
-  display: inline-block;
-  background-color: #fe5f1e;
-  border-radius: 30px;
-  padding: 10px 20px;
-  min-width: 100px;
-  text-align: center;
+  padding: 8px 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  background-color: #4b4b4b;
+  border: 1px solid #4b4b4b;
   cursor: pointer;
-  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-  border: 1px solid transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  transition: 0.4s;
+
+  span {
+    color: white;
+  }
+
+  &:hover {
+    background: none;
+    span {
+      color: black;
+    }
+  }
+  &:active {
+    background-color: lighten(#4b4b4b, 10%);
+  }
+  svg {
+    path {
+      fill: #4b4b4b;
+    }
+  }
 }
 
-.button,
-.button span {
-  color: #fff;
-}
+.button__outlined {
+  background: none;
+  svg {
+    path {
+      fill: #4b4b4b;
+    }
+  }
 
-.button i,
-.button span,
-.button path,
-.button svg {
-  -webkit-transition: all 0.15s ease-in-out;
-  transition: all 0.15s ease-in-out;
-}
+  span {
+    color: black;
+  }
 
-.button:hover {
-  background-color: #f24701;
-}
+  &:hover {
+    background: #4b4b4b;
+    span {
+      color: white;
+    }
+  }
 
-.button:active {
-  background-color: #de4101;
-  -webkit-transform: translateY(1px);
-  transform: translateY(1px);
+  &:active {
+    background-color: lighten(#4b4b4b, 10%);
+  }
 }
 
 .button__circle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  min-width: 32px;
   padding: 0;
-  border-width: 2px;
-}
-
-.button--black {
-  background-color: #232323;
-}
-
-.button--black:hover,
-.button--black:active {
-  background-color: #3d3d3d;
-}
-
-.button__outline {
-  background-color: #fff;
-  border-color: #fe5f1e;
-}
-
-.button--outline,
-.button--outline span {
-  color: #fe5f1e;
-}
-
-.button--outline svg path {
-  fill: #fe5f1e;
-}
-
-.button--outline:hover {
-  background-color: #fe5f1e;
-}
-
-.button--outline:hover,
-.button--outline:hover span {
-  color: #fff;
-}
-
-.button--outline:hover svg path {
-  fill: #fff;
-}
-
-.button--outline:active {
-  background-color: #f24701;
-}
-
-.button__delimiter {
-  width: 1px;
   height: 25px;
-  background-color: rgba(255, 255, 255, 0.25);
-  margin-left: 14px;
-  margin-right: 14px;
-}
-
-.button__add svg {
-  margin-right: 2px;
-}
-
-.button__add span {
-  font-weight: 600;
-  font-size: 16px;
-}
-
-.button__add:hover i {
-  background-color: #fff;
-  color: #fe5f1e;
-}
-
-.button__add i {
-  display: inline-block;
-  border-radius: 30px;
-  background-color: #fe5f1e;
-  color: #fff;
-  font-weight: 600;
-  width: 22px;
-  height: 22px;
-  font-style: normal;
-  font-size: 13px;
-  line-height: 22px;
-  position: relative;
-  top: -1px;
-  left: 3px;
-}
-
-.button--cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 25px;
+  background: none;
+  border: 1px solid #4b4b4b;
+  border-radius: 50%;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  line-height: 23px;
-  padding: 12px 25px;
-}
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s;
 
-.button--cart svg {
-  margin-right: 8px;
-  margin-bottom: 1px;
-}
+  &:hover {
+    background-color: lighten(#4b4b4b, 50%);
+  }
 
-.button--cart span {
-  font-weight: 600;
-  font-size: 16px;
+  &:active {
+    background-color: lighten(#4b4b4b, 60%);
+  }
 }
 
 .categories ul {
@@ -609,6 +432,11 @@ body {
   -ms-flex-align: center;
   align-items: center;
   margin-right: 15px;
+
+  img {
+    height: 150px;
+    width: 150px;
+  }
 }
 
 .cart__item_title {
@@ -704,7 +532,7 @@ body {
   transform: rotate(135deg);
 
   .button {
-    border-color: #adabab;
+    border: 1px solid #4b4b4b;
     background-color: #faf8f8;
 
     &:hover {
