TS: Simple typisation of main components

--- a/src/App.scss
+++ b/src/App.scss
@@ -459,7 +459,7 @@ a {
 }
 
 body {
-  background-color: #ffdf8c;
+  background-color: #4d4d4d;
 }
 
 .wrapper {
@@ -737,7 +737,7 @@ body {
 }
 
 .cart__bottom-details span:last-of-type b {
-  color: #fe5f1e;
+  color: #4f4f4f;
 }
 
 .cart__bottom-buttons {
